# frida-mcp

./: .gitignore  CLAUDE.md  README.md  config.json  device_manager.py  frida_mcp.py  kill_process.py  pyproject.toml  requirements.txt  test.js  test_frida_mcp.py
